--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
+  "homepage": "https://github.com/GabrielRegis/react-native-fixed-rabbitmq",
   "maintainers": [
     {
       "name": "timhonders",
